--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha test",
+    "ui-test": "node ./node_modules/thing-it-test/bin/server.js"
   },
   "author": "",
   "license": "ISC",
